Squashed 'plugins/weather_routing_pi/' changes from a51ddbc..e084805
e084805 use correct number for rounding on slow start exit
39acc91 increase angular resolution if boundary/land
a7f9844 slow end
3ab407c always test boundary points, they don't have distance
835a506 don't search for boundaries after end point
5e736bf enter boundary distance and right time interval for plot
902bed0 use the right time interval for end propagation
ba0070a slow start
9275998 Revert "use last position if can't reach with n-1"
6924c7a start with a small step
19ad969 don't subsearch if boundary is an inclusion
2b8eacb add some head to boundary entry detection
b5988af try smaller angular step if boundary
4476dfd add land and boundary to error indicator
2a09a2d use last position if can't reach with n-1
cc1d5a4 rename dt DeltaTime
23243f3 request DR to cache its boundaries, unfinished
0a482b9 temporary add new opencpn.lib
3864552 add a lock around shared grib record cache
f01a5ad use a cache for grib records
5f67bfd initialised W VW, otherwise function can return without setting them
5bea262 backport from grib_pi
8f48e7a backport GribRecord stuff from OpenCPN
81b1c7f use a reference rather than a copy
4c58073 backport timeline changes from oCPN
8e7a92d Merge pull request #130 from nohal/master
be34a82 Update the compilation flags
96c19d0 Merge pull request #128 from did-g/wind_strength_fs2325
11ff3e6 Wind Strenght replace do nothing OnUpdate with OnUpdateSpin
7ed7ae3 Merge pull request #124 from did-g/null_ref
018c6cf null dereferenced pointer
546281f Merge pull request #112 from did-g/export_track
3a63f64 Merge pull request #113 from stelian42/fix-dialog-layout
d5967b9 Merge pull request #115 from did-g/config_report
b78fb8f Merge pull request #120 from nohal/master
c95eb0a Implement SVG icons for improved high resolution display support.
b0ea0cc Improve window behaviour on macOS and fix build inside the OpenCPN source tree on macOS
d7d5ed5 export: destination is null if config didn't reach

--- a/README
+++ b/README
@@ -28,3 +28,6 @@ For OSX standalone build in weather_routing_pi directory:
 License
 =======
 The plugin code is licensed under the terms of the GPL v3+
+
+Part of the icons made by Smashicons (https://www.flaticon.com/authors/smashicons) from Flaticon (https://www.flaticon.com/) and is licensed under CC BY 3.0 (http://creativecommons.org/licenses/by/3.0)
+
